add readme instruction

--- a/src/views/sceleton.twig
+++ b/src/views/sceleton.twig
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    {% block meta %}
-    <title>Tools</title>
-    {% endblock %}
-    <link href="/src/css/style.css" rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  {% block meta %}
+    <title>Silex skeleton + gulp + livereload</title>
+  {% endblock %}
+  <link href="/build/css/style.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 
-    {% block content %}
-        Hello!
-    {% endblock %}
+  {% block content %}
+    Hello!
+  {% endblock %}
 
 </div>
 </body>
